--- a/calculadora/style.css
+++ b/calculadora/style.css
@@ -16,6 +16,11 @@ body{
     transform: translate(-50%, -50%); /*Retira 50% dos eixos X e Y, assim, centralizando*/
     border-radius: 10px;
 }
+@media screen and (max-width: 768px){
+    .calculadora{
+        width: 50%;
+    }
+}
 .btn{
     width: 50px;
     height: 50px;
