--- a/calculadora/style.css
+++ b/calculadora/style.css
@@ -16,9 +16,10 @@ body{
     transform: translate(-50%, -50%); /*Retira 50% dos eixos X e Y, assim, centralizando*/
     border-radius: 10px;
 }
-@media screen and (max-width: 768px){
+@media screen and (max-width: 600px){
     .calculadora{
         width: 50%;
+        margin: auto;
     }
 }
 .btn{
