--- a/calculadora/style.css
+++ b/calculadora/style.css
@@ -16,10 +16,10 @@ body{
     transform: translate(-50%, -50%); /*Retira 50% dos eixos X e Y, assim, centralizando*/
     border-radius: 10px;
 }
-@media screen and (max-width: 600px){
+@media screen and (max-width: 500px){
     .calculadora{
         width: 100%;
-        margin: auto;
+        float: none;
     }
 }
 .btn{
