--- a/calculadora/style.css
+++ b/calculadora/style.css
@@ -6,6 +6,7 @@ body{
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    background-image: linear-gradient(to right, rgb(0, 0, 0), rgba(252, 0, 0, 0.884));
 }
 .calculadora{
     position: absolute;/*Ocupa o próprio espaço*/
@@ -16,10 +17,9 @@ body{
     transform: translate(-50%, -50%); /*Retira 50% dos eixos X e Y, assim, centralizando*/
     border-radius: 10px;
 }
-@media screen and (max-width: 200px){
+@media screen and (max-width: 600px){
     .calculadora{
-        width: 100%;
-        float: none;
+        width: 50%;
     }
 }
 .btn{
@@ -42,4 +42,8 @@ body{
     text-align: right;
     padding: 5px;
     font-size: 2em;
+}
+p{
+    color: white;
+    margin-top: 100px;
 }
